adding logs, request-id, fixing tests and more
