# adapter/controller/create_customer_controller.go
@@ -1,12 +1,14 @@
 package controller
 
 import (
+	"context"
 	"encoding/json"
 	"io"
 	"net/http"
 	"transfer-api/adapter/response"
 	"transfer-api/core/usecase"
 	"transfer-api/core/usecase/input"
+	"transfer-api/core/util"
 )
 
 type CreateCustomerController struct {
@@ -17,7 +19,23 @@ func NewCreateCustomerController(useCase usecase.CreateCustomerUseCase) *CreateC
 	return &CreateCustomerController{useCase}
 }
 
+// Execute Create Customer creates a customer and account
+//
+//	@Summary		Create Customer
+//	@Description	Creates a customer and an account
+//	@Tags			Customer
+//	@Accept			json
+//	@Produce		json
+//	@Param			customer	body		input.CreateCustomerInput	true	"Customer and Account information"
+//	@Success		201			{object}	output.CreateCustomerOutput
+//	@Failure		400			{object}	dto.ErrorDTO
+//	@Failure		500			{object}	dto.ErrorDTO
+//	@Router			/customers [post]
 func (uc *CreateCustomerController) Execute(w http.ResponseWriter, r *http.Request) {
+	ctx := r.Context()
+	requestId := util.GetRequestIdFromHeader(r)
+	ctx = context.WithValue(ctx, "request_id", requestId)
+
 	var payload input.CreateCustomerInput
 	err := json.NewDecoder(r.Body).Decode(&payload)
 	if err != nil {
@@ -33,7 +51,7 @@ func (uc *CreateCustomerController) Execute(w http.ResponseWriter, r *http.Reque
 		}
 	}(r.Body)
 
-	output, err := uc.useCase.Execute(payload)
+	output, err := uc.useCase.Execute(ctx, payload)
 	if err != nil {
 		response.BadRequest(w, err)
 		return
