# adapter/controller/get_customer_controller.go
@@ -1,11 +1,13 @@
 package controller
 
 import (
+	"context"
 	"encoding/json"
 	"io"
 	"net/http"
 	"transfer-api/adapter/response"
 	"transfer-api/core/usecase"
+	"transfer-api/core/util"
 )
 
 type GetCustomerController struct {
@@ -16,7 +18,22 @@ func NewGetCustomerController(useCase usecase.GetCustomerUseCase) *GetCustomerCo
 	return &GetCustomerController{useCase}
 }
 
+// Execute Get Customer retrieves a customer
+//
+//	@Summary		Get Customer By Account
+//	@Description	Retrieves a Customer by his account_id
+//	@Tags			Customer
+//	@Produce		json
+//	@Param			accountId	path		string	true	"Account ID"
+//	@Success		200			{object}	output.GetCustomerOutput
+//	@Failure		404			{object}	dto.ErrorDTO
+//	@Failure		500			{object}	dto.ErrorDTO
+//	@Router			/customers/{accountId} [get]
 func (uc *GetCustomerController) Execute(w http.ResponseWriter, r *http.Request) {
+	ctx := r.Context()
+	requestId := util.GetRequestIdFromHeader(r)
+	ctx = context.WithValue(ctx, "request_id", requestId)
+
 	defer func(Body io.ReadCloser) {
 		err := Body.Close()
 		if err != nil {
@@ -26,7 +43,7 @@ func (uc *GetCustomerController) Execute(w http.ResponseWriter, r *http.Request)
 
 	accountId := r.URL.Query().Get("accountId")
 
-	output, err := uc.useCase.Execute(accountId)
+	output, err := uc.useCase.Execute(ctx, accountId)
 	if err != nil {
 		response.BadRequest(w, err)
 		return
