# docs/swagger.json
@@ -3,6 +3,7 @@
     "info": {
         "contact": {
             "name": "Desenvolvedor",
+            "url": "https://github.com/princeflaco",
             "email": "leobbispo@hotmail.com"
         },
         "license": {
@@ -126,6 +127,42 @@
             }
         },
         "/transfers/{accountId}": {
+            "get": {
+                "description": "Lists the transfer history in descending order of an account",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Customer"
+                ],
+                "summary": "List the transfer history of an account",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Account ID",
+                        "name": "accountId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/output.TransferHistoryOutput"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorDTO"
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "Transfer an amount between accounts",
                 "consumes": [
@@ -249,6 +286,32 @@
                     "type": "string"
                 },
                 "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "output.TransferHistoryOutput": {
+            "type": "object",
+            "properties": {
+                "account_id": {
+                    "type": "string"
+                },
+                "amount": {
+                    "type": "number"
+                },
+                "date": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "reason": {
+                    "type": "string"
+                },
+                "success": {
+                    "type": "boolean"
+                },
+                "target_account_id": {
                     "type": "string"
                 }
             }
